--- a/sass/Utils/_variables.scss
+++ b/sass/Utils/_variables.scss
@@ -2,11 +2,10 @@
 //Les Variables
 //------------------------
 /*exemples de variables*/
-/*$primary : #9356DC;
-$secondary: #FF79DA;
-$tertiary: #99E2D0;
-$grey: #D3D3D3;
+$primary : #ABFF85;
+$secondary:#2A5A8E ;
+$tertiary: #000;
+$grey: #F2F2F2;
 $white: #FFF;
-$mint: #99e2d0;
-$green: #008766;*/
+
 
