--- a/sass/style.scss
+++ b/sass/style.scss
@@ -13,15 +13,6 @@ body {
     font-family:'freestyle-script-regular', sans-serif;
     margin:0;
     Header {
-        .title {
-            align-items: center;
-            h1, h2 {
-                text-align: center;
-                font-family: 'freestyle-script-regular', sans-serif;
-                color: $primary;
-            }
-
-        }
         width: 100%;
         display: flex;
             flex-direction: column;
@@ -29,13 +20,13 @@ body {
             justify-content: space-between;
         min-height: 250px;
         background: rgb(42,90,142);
-background: linear-gradient(177deg, rgba(42,90,142,1) 6%, rgba(255,255,255,1) 100%);
-        
+        background: linear-gradient(177deg, rgba(42,90,142,1) 6%, rgba(255,255,255,1) 100%);
+        .headerLogo {
+            width: 90%;
+            max-width: 500px;
+        }
         .navigation {
-            padding-bottom: 30px;
-            
-            
-            
+            padding-bottom: 30px;    
             ul {
                 margin:0;
                 padding:0;
@@ -55,6 +46,155 @@ background: linear-gradient(177deg, rgba(42,90,142,1) 6%, rgba(255,255,255,1) 10
                 }
             }
         }
+    }
+    main {
+        display:flex;
+        flex-direction: column;
+        align-items: center;
+        .location {
+            display:flex;
+            justify-content: center;
+            background-color: $grey;
+            background: rgba($grey, 0.5);
+            width: 100%;
+            font-weight: bold;
+            padding: 1em 0;
+            border-top: 3px solid $grey;
+    
+            .locationIcon, .locationTitle {
+                margin: 0 0.5em;
+                color: $secondary;
+            }
+        }
+        .search {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-around;
+            width:90%;
+            padding:1em;
+            .wrapper {
+                display: flex;
+                justify-content: space-around;
+                min-width: 150px;
+                margin:2em 3em 1.5em 3em;
+              }
+              
+              .cta {
+                  display: flex;
+                  align-items: center;
+                  padding: 0.5em 0.5em;
+                  text-decoration: none;
+                  
+                  font-size: 25px;
+                  color: white;
+                  background: $secondary;
+                  transition: 1s;
+                  box-shadow: 6px 6px 0 black;
+                  transform: skewX(-15deg);
+                  
+              }
+              
+              .cta:focus {
+                 outline: none; 
+              }
+              
+              .cta:hover {
+                  transition: 0.5s;
+                  box-shadow: 10px 10px 0 $primary;
+              }
+              
+              .cta span:nth-child(2) {
+                  transition: 0.5s;
+                  margin-right: 0px;
+              }
+              
+              .cta:hover  span:nth-child(2) {
+                  transition: 0.5s;
+                  margin-right: 45px;
+              }
+              
+                span {
+                  transform: skewX(15deg) 
+                }
+              
+                span:nth-child(2) {
+                  width: 20px;
+                  margin-left: 30px;
+                  position: relative;
+                  top: 12%;
+                }
+                
+              /**************SVG****************/
+              
+              path.one {
+                  transition: 0.4s;
+                  transform: translateX(-60%);
+              }
+              
+              path.two {
+                  transition: 0.5s;
+                  transform: translateX(-30%);
+              }
+              
+              .cta:hover path.three {
+                  animation: color_anim 1s infinite 0.2s;
+              }
+              
+              .cta:hover path.one {
+                  transform: translateX(0%);
+                  animation: color_anim 1s infinite 0.6s;
+              }
+              
+              .cta:hover path.two {
+                  transform: translateX(0%);
+                  animation: color_anim 1s infinite 0.4s;
+              }
+              
+              /* SVG animations */
+              
+              @keyframes color_anim {
+                  0% {
+                      fill: white;
+                  }
+                  50% {
+                      fill: $primary;
+                  }
+                  100% {
+                      fill: white;
+                  }
+              }
+            
+            
 
+            
+        }
+            
+        
+        .textWelcome {
+            border: 2px solid $grey;
+            border-radius: 30px;
+            display:flex;
+            flex-direction: column;
+            align-items: center;
+            margin-top: 2em;
+            .text1 {
+                font-style: italic;
+                margin: 1em;
+                width: 280px;
+                color: $secondary;
+            }
+        }
+    }
+    footer {
+
+    }
+}
+@media screen and (max-width: 700px) {
+    body {
+        main{
+            .search {
+                
+            }
+        }
     }
 }
