--- a/public/css/style.css
+++ b/public/css/style.css
@@ -16,14 +16,9 @@ body Header {
   background: linear-gradient(177deg, #2a5a8e 6%, white 100%);
 }
 
-body Header .title {
-  align-items: center;
-}
-
-body Header .title h1, body Header .title h2 {
-  text-align: center;
-  font-family: 'freestyle-script-regular', sans-serif;
-  color: #ABFF85;
+body Header .headerLogo {
+  width: 90%;
+  max-width: 500px;
 }
 
 body Header .navigation {
@@ -47,5 +42,139 @@ body Header .navigation ul .boutonContact {
   text-align: center;
   color: #fff;
   background-color: #2A5A8E;
+}
+
+body main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+body main .location {
+  display: flex;
+  justify-content: center;
+  background-color: #F2F2F2;
+  background: rgba(242, 242, 242, 0.5);
+  width: 100%;
+  font-weight: bold;
+  padding: 1em 0;
+  border-top: 3px solid #F2F2F2;
+}
+
+body main .location .locationIcon, body main .location .locationTitle {
+  margin: 0 0.5em;
+  color: #2A5A8E;
+}
+
+body main .search {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  width: 90%;
+  padding: 1em;
+  /**************SVG****************/
+  /* SVG animations */
+}
+
+body main .search .wrapper {
+  display: flex;
+  justify-content: space-around;
+  min-width: 150px;
+  margin: 2em 3em 1.5em 3em;
+}
+
+body main .search .cta {
+  display: flex;
+  align-items: center;
+  padding: 0.5em 0.5em;
+  text-decoration: none;
+  font-size: 25px;
+  color: white;
+  background: #2A5A8E;
+  transition: 1s;
+  box-shadow: 6px 6px 0 black;
+  transform: skewX(-15deg);
+}
+
+body main .search .cta:focus {
+  outline: none;
+}
+
+body main .search .cta:hover {
+  transition: 0.5s;
+  box-shadow: 10px 10px 0 #ABFF85;
+}
+
+body main .search .cta span:nth-child(2) {
+  transition: 0.5s;
+  margin-right: 0px;
+}
+
+body main .search .cta:hover span:nth-child(2) {
+  transition: 0.5s;
+  margin-right: 45px;
+}
+
+body main .search span {
+  transform: skewX(15deg);
+}
+
+body main .search span:nth-child(2) {
+  width: 20px;
+  margin-left: 30px;
+  position: relative;
+  top: 12%;
+}
+
+body main .search path.one {
+  transition: 0.4s;
+  transform: translateX(-60%);
+}
+
+body main .search path.two {
+  transition: 0.5s;
+  transform: translateX(-30%);
+}
+
+body main .search .cta:hover path.three {
+  animation: color_anim 1s infinite 0.2s;
+}
+
+body main .search .cta:hover path.one {
+  transform: translateX(0%);
+  animation: color_anim 1s infinite 0.6s;
+}
+
+body main .search .cta:hover path.two {
+  transform: translateX(0%);
+  animation: color_anim 1s infinite 0.4s;
+}
+
+@keyframes color_anim {
+  0% {
+    fill: white;
+  }
+  50% {
+    fill: #ABFF85;
+  }
+  100% {
+    fill: white;
+  }
+}
+
+body main .textWelcome {
+  border: 2px solid #F2F2F2;
+  border-radius: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 2em;
+}
+
+body main .textWelcome .text1 {
+  font-style: italic;
+  margin: 1em;
+  width: 280px;
+  color: #2A5A8E;
 }
 /*# sourceMappingURL=style.css.map */
