--- a/sass/style.scss
+++ b/sass/style.scss
@@ -4,39 +4,121 @@
 @import "./Utils/mixins";
 @import "./Utils/animations.scss"; 
 
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Shrikhand&display=swap');
 
-
-
+@font-face {
+    font-family: 'Freestyle Script Regular';
+    font-style: normal;
+    font-weight: normal;
+    src: local('Freestyle Script Regular'), url('../../fonts/FREESCPT.woff') format('woff');
+    }
 
 body {
-    font-family:'freestyle-script-regular', sans-serif;
+    font-family: "Freestyle Script Regular";
     margin:0;
+    
     Header {
+        /*background-image: url(../../images/tacheFinale.PNG);
+        background-size: cover;*/
         width: 100%;
         display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: space-between;
-        min-height: 250px;
+        min-height: 260px;
+        max-height: 260px;
         background: rgb(42,90,142);
         background: linear-gradient(177deg, rgba(42,90,142,1) 6%, rgba(255,255,255,1) 100%);
-        .headerLogo {
-            width: 90%;
-            max-width: 500px;
+        padding:0;
+        margin:0;
+        
+
+        
+        .headerImg {
+            width: 100%;
+            max-width: 450px;
+            height: 320px;
+            top : -30px;
+            position: relative;
+            /*object-fit: cover;*/
         }
+        H1 {
+            
+            position: absolute;
+            top : 27px;
+            color: $primary;
+            font-size: 90px;
+            margin: 0;
+            .orange {
+                color:$tertiary;
+            }
+        }
+        h2 {
+            
+            position: absolute;
+            top: 90px;
+            color: $primary;
+            font-size: 80px;
+            margin: 0;
+        }
+        .nav { 
+                
+            .nav-links {
+                position: absolute;
+                display: block;
+                width: 100%;
+                flex-wrap: wrap;
+                background-color: green;
+                height: 0px;
+                transition: all 0.3s ease-in;
+                overflow-y: hidden;
+                top: 150px;
+                left: 0px;
+                display: flex;
+                flex-direction: row;
+                justify-content: space-around;
+                align-items: center;
+                a {
+                    text-align: center;
+                    margin: 0.5em;
+                    cursor: pointer;
+                        height: 20px;
+                        border: 1px solid red;
+                        border-radius: 0.5em;
+                        background: rgb(75,148,34);
+                        background: linear-gradient(9deg, rgba(75,148,34,1) 45%, rgba(160,220,68,0.4514180672268907) 100%);
+                        color: $white;
+                        padding: 0.5em;
+                        cursor: pointer;
+                        text-decoration: none;
+                        box-shadow: 0px 4px 8px 0px #00000020;
+                        &:hover {
+                            color:$secondary;
+                            transform: scale(1.02);
+                        }
+                }      
+            }
+        }
+        .nav > #nav-check:not(:checked) ~ .nav-links {
+                height: 0px;
+        }
+        .nav > #nav-check:checked ~ .nav-links {
+                height: calc(105px - 50px);
+                overflow-y: auto;
+        }
+         
         .navigation {
-            padding-bottom: 30px;    
+            padding-bottom: 30px;   
+            top: 210px;
+            position: absolute;
             ul {
                 margin:0;
                 padding:0;
                 .boutonContact {
-                    
                     padding: 6px 20px;
                     text-decoration: none;
-                    font-family: 'freestyle-script-regular', sans-serif;
+                    font-size: 25px;
                     font-weight: bold;
-                    border: solid 2px $grey;
+                    border: solid 2px grey;
                     width: 90px;
                     height: 25px;
                     border-radius: 30px;
@@ -48,6 +130,14 @@ body {
         }
     }
     main {
+        
+        background-image: url(../../images/a-bright-window-lite-room-shows-a-home-office.jpg);
+        background-repeat: no-repeat;
+        
+        /*background-position: fixed;*/
+        background-size: cover;
+        width: 100%;
+        height: 100%;
         display:flex;
         flex-direction: column;
         align-items: center;
@@ -160,7 +250,7 @@ body {
                       fill: $primary;
                   }
                   100% {
-                      fill: white;
+                      fill: $tertiary;
                   }
               }
             
@@ -186,15 +276,101 @@ body {
         }
     }
     footer {
-
-    }
-}
-@media screen and (max-width: 700px) {
-    body {
-        main{
-            .search {
+        .infos {
+            width: 100%;
+            background-color: $secondary;
+            display:flex;
+            justify-content: space-evenly;
+            align-items: center;
+            height: 100px;
+            a {
+                margin: 0 0.5em;
                 
+                    color: $primary;
+                    
+            
+
             }
         }
     }
+    @media screen and (max-width: 700px) {
+        
+        header {
+            .nav {
+                input {
+                    display:none;
+                }
+            }
+            .nav > .nav-btn {
+                display: inline-block;
+                position: absolute;
+                right: 0;
+                top: 0px;
+            }
+            .nav > .nav-btn > label {
+                display: inline-block;
+                width: 25px;
+                height: 50px;
+                padding: 15px;
+            }
+            .nav > .nav-btn > label:hover,.nav  #nav-check:checked ~ .nav-btn > label {
+                background-color: rgba(0, 0, 0, 0.3);
+            }
+            .nav > .nav-btn > label > span {
+                display: block;
+                width: 25px;
+                height: 10px;
+                border-top: 2px solid $tertiary;
+            }
+            .nav > .nav-links {
+                position: absolute;
+                display: block;
+                width: 100%;
+                background-color: $secondary;
+                height: 0px;
+                transition: all 0.3s ease-in;
+                overflow-y: hidden;
+                top: 260px;
+                left: 0px;
+                display: flex;
+                justify-content: space-evenly;
+                flex-wrap: wrap;
+            }
+            .nav > .nav-links > a {
+                width: 150px;
+                text-align: center;
+                /*margin: 0.2em;*/
+                cursor: pointer;
+                border: 2px solid $tertiary;
+                border-radius: 1em;
+                background: rgb(75,148,34);
+                background: linear-gradient(9deg, rgba(75,148,34,1) 45%, rgba(160,220,68,0.4514180672268907) 100%);
+                color: $white;
+                font-size: 27px;
+                padding: 0.5em;
+                text-decoration: none;
+                box-shadow: 0px 4px 8px 0px #00000020;
+                &:hover {
+                    color:$secondary;
+                    transform: scale(1.02);
+                }
+                
+            }
+            .nav > #nav-check:not(:checked) ~ .nav-links {
+                height: 0px;
+            }
+            .nav > #nav-check:checked ~ .nav-links {
+                height: calc(625px - 50px);
+                overflow-y: auto;
+            }
+        }
+        main{
+            .search {
+                display:none; 
+    }    
+        }
+    }
 }
+        
+    
+
