--- a/sass/Utils/_variables.scss
+++ b/sass/Utils/_variables.scss
@@ -4,7 +4,7 @@
 /*exemples de variables*/
 $primary : #ABFF85;
 $secondary:#2A5A8E ;
-$tertiary: #000;
+$tertiary: #FF925C;
 $grey: #F2F2F2;
 $white: #FFF;
 
