--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,3 @@
-/*exemples de variables*/
 @font-face {
   font-family: 'Freestyle Script Regular';
   font-style: normal;
@@ -12,8 +11,6 @@ body {
 }
 
 body Header {
-  /*background-image: url(../../images/tacheFinale.PNG);
-        background-size: cover;*/
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -21,19 +18,18 @@ body Header {
   justify-content: space-between;
   min-height: 260px;
   max-height: 260px;
-  background: #2a5a8e;
-  background: linear-gradient(177deg, #2a5a8e 6%, white 100%);
   padding: 0;
   margin: 0;
+  background-color: #e6e6fb;
+  background-image: url("https://www.transparenttextures.com/patterns/brick-wall-dark.png");
 }
 
 body Header .headerImg {
   width: 100%;
   max-width: 450px;
-  height: 320px;
+  min-height: 300px;
   top: -30px;
   position: relative;
-  /*object-fit: cover;*/
 }
 
 body Header H1 {
@@ -61,7 +57,6 @@ body Header .nav .nav-links {
   display: block;
   width: 100%;
   flex-wrap: wrap;
-  background-color: green;
   height: 0px;
   transition: all 0.3s ease-in;
   overflow-y: hidden;
@@ -80,8 +75,6 @@ body Header .nav .nav-links a {
   height: 20px;
   border: 1px solid red;
   border-radius: 0.5em;
-  background: #4b9422;
-  background: linear-gradient(9deg, #4b9422 45%, rgba(160, 220, 68, 0.451418) 100%);
   color: #FFF;
   padding: 0.5em;
   cursor: pointer;
@@ -109,29 +102,39 @@ body Header .navigation {
   position: absolute;
 }
 
-body Header .navigation ul {
+body Header .navigation .navList {
   margin: 0;
   padding: 0;
 }
 
-body Header .navigation ul .boutonContact {
+body Header .navigation .navList .boutonContact {
   padding: 6px 20px;
   text-decoration: none;
-  font-size: 25px;
-  font-weight: bold;
-  border: solid 2px grey;
-  width: 90px;
+  font-size: 34px;
+  width: 150px;
   height: 25px;
-  border-radius: 30px;
   text-align: center;
-  color: #fff;
-  background-color: #2A5A8E;
+  color: #FFF;
+}
+
+body Header .navigation .effetNeon {
+  text-align: center;
+  text-shadow: 0 0 7px #fff, 0 0 10px #fff, 0 0 42px #FF925C, 0 0 77px #FF925C, 0 0 100px #FF925C;
+  animation: lumiere 1s infinite linear;
+}
+
+@keyframes lumiere {
+  0% {
+    text-shadow: 0 0 7px #fff, 0 0 10px #fff, 0 0 22px #FF925C, 0 0 47px #FF925C, 0 0 70px #FF925C;
+  }
+  50% {
+    text-shadow: 0 0 7px #fff, 0 0 10px #fff, 0 0 12px #FF925C, 0 0 57px #FF925C, 0 0 90px #FF925C;
+  }
 }
 
 body main {
   background-image: url(../../images/a-bright-window-lite-room-shows-a-home-office.jpg);
   background-repeat: no-repeat;
-  /*background-position: fixed;*/
   background-size: cover;
   width: 100%;
   height: 100%;
@@ -158,9 +161,7 @@ body main .location .locationIcon, body main .location .locationTitle {
 
 body main .search {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  width: 90%;
+  justify-content: space-evenly;
   padding: 1em;
   /**************SVG****************/
   /* SVG animations */
@@ -170,7 +171,7 @@ body main .search .wrapper {
   display: flex;
   justify-content: space-around;
   min-width: 150px;
-  margin: 2em 3em 1.5em 3em;
+  margin: 2em 1.5em 1.5em 1.5em;
 }
 
 body main .search .cta {
@@ -270,19 +271,29 @@ body main .textWelcome .text1 {
 
 body footer .infos {
   width: 100%;
-  background-color: #2A5A8E;
+  background-color: #e6e6fb;
+  background-image: url("https://www.transparenttextures.com/patterns/brick-wall-dark.png");
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+body footer .infos .droits, body footer .infos .contact, body footer .infos .siret {
   display: flex;
   justify-content: space-evenly;
-  align-items: center;
-  height: 100px;
+  flex-wrap: wrap;
+  margin: 0.5em;
 }
 
-body footer .infos a {
-  margin: 0 0.5em;
-  color: #ABFF85;
+body footer .infos .droits a, body footer .infos .contact a, body footer .infos .siret a {
+  text-decoration: none;
+  margin: 0 1em;
+  color: #f2f2f2;
+  font-size: 30px;
+  text-shadow: 3px 5px 2px #474747, 2px 2px 2px rgba(206, 89, 55, 0);
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 732px) {
   body header .nav input {
     display: none;
   }
@@ -305,13 +316,14 @@ body footer .infos a {
     display: block;
     width: 25px;
     height: 10px;
-    border-top: 2px solid #FF925C;
+    border-top: 2px solid #ABFF85;
   }
   body header .nav > .nav-links {
     position: absolute;
     display: block;
     width: 100%;
-    background-color: #2A5A8E;
+    background-color: #e6e6fb;
+    background-image: url("https://www.transparenttextures.com/patterns/brick-wall-dark.png");
     height: 0px;
     transition: all 0.3s ease-in;
     overflow-y: hidden;
@@ -323,14 +335,13 @@ body footer .infos a {
   }
   body header .nav > .nav-links > a {
     width: 150px;
+    height: 25px;
     text-align: center;
-    /*margin: 0.2em;*/
     cursor: pointer;
-    border: 2px solid #FF925C;
-    border-radius: 1em;
-    background: #4b9422;
-    background: linear-gradient(9deg, #4b9422 45%, rgba(160, 220, 68, 0.451418) 100%);
-    color: #FFF;
+    border: 0.01px solid #2A5A8E;
+    border-radius: 0.4em;
+    background: conic-gradient(#d7d7d7, #c3c3c3, #cccccc, #c6c6c6, #d7d7d7, #c3c3c3, #cccccc, #c6c6c6, #d7d7d7, #c3c3c3, #cccccc, #c6c6c6, #d7d7d7, #c3c3c3, #cccccc, #c6c6c6);
+    color: #2A5A8E;
     font-size: 27px;
     padding: 0.5em;
     text-decoration: none;
