--- a/sass/Utils/_variables.scss
+++ b/sass/Utils/_variables.scss
@@ -1,11 +1,12 @@
 //------------------------
 //Les Variables
 //------------------------
-/*exemples de variables*/
+
 $primary : #ABFF85;
 $secondary:#2A5A8E ;
 $tertiary: #FF925C;
 $grey: #F2F2F2;
 $white: #FFF;
-
+$bluesky: #ade8f4;
+$wall: rgb(230, 230, 251);
 
