--- a/sass/style.scss
+++ b/sass/style.scss
@@ -39,6 +39,7 @@ body {
             position: absolute;
             top : 27px;
             color: $primary;
+            text-shadow: 3px 3px 2px black;
             font-size: 90px;
             margin: 0;
             .orange {
@@ -49,11 +50,12 @@ body {
             position: absolute;
             top: 90px;
             color: $primary;
+            text-shadow: 3px 3px 2px black;
             font-size: 80px;
             margin: 0;
         }
         .nav {
-            display: none; 
+            display: none;
             .nav-links {
                 position: absolute;
                 display: block;
@@ -278,9 +280,11 @@ body {
                 a {
                     text-decoration: none;
                     margin:0 1em;
-                    color: #f2f2f2;
                     font-size: 30px;
-                    text-shadow: 3px 5px 2px #474747, 2px 2px 2px rgba(206,89,55,0);
+                    /*color: #f2f2f2;
+                    text-shadow: 3px 5px 2px #474747, 2px 2px 2px rgba(206,89,55,0);*/
+                    color: $white;
+            text-shadow: 3px 3px 2px black;
                 }
             }
         }
