--- a/public/css/style.css
+++ b/public/css/style.css
@@ -26,9 +26,11 @@ body Header {
 
 body Header .headerImg {
   width: 100%;
-  max-width: 450px;
-  min-height: 300px;
-  top: -30px;
+  min-width: 360px;
+  max-width: 360px;
+  min-height: 190px;
+  top: 10px;
+  margin: 0;
   position: relative;
 }
 
