--- a/sass/style.scss
+++ b/sass/style.scss
@@ -30,9 +30,11 @@ body {
         background-image: url("https://www.transparenttextures.com/patterns/brick-wall-dark.png");
         .headerImg {
             width: 100%;
-            max-width: 450px;
-            min-height: 300px;
-            top : -30px;
+            min-width: 360px;
+            max-width: 360px;
+            min-height: 190px;
+            top : 10px;
+            margin:0;
             position: relative;
         }
         H1 {
